@@ -25,11 +25,13 @@ cd guile-gtk-2.0
   
    Things to fix before 0.3.2
 
+   o residue range was inserted into the wrong place in the pdb file
+     (old version?)
+
    o Change the Release notes, 
      the ChangeLog, 
      configure.in (obviously)
      old coot timer
-
 
 
    o optionally animate fit-waters
